@@ -88,11 +88,11 @@ date(1) tool.
 The default MAC algorithm to use with TOTP is HMAC\-SHA1 and this is
 what is usually used.  The tool supports two other MACs, namely the
 HMAC\-SHA256 and HMAC\-SHA512 as well.  To use either of these,
-qualify the \-\-totp parameter with a value.  Use "sha256" for
-HMAC\-SHA256 and "sha512" for HMAC\-SHA512.  The following demonstrate
+qualify the \-\-totp parameter with a value.  Use "SHA256" for
+HMAC\-SHA256 and "SHA512" for HMAC\-SHA512.  The following demonstrate
 generating one of the RFC 6238 test vectors.
 
-   $ oathtool \-\-totp=sha256 \-\-digits=8 \-\-now "2009\-02\-13 23:31:30 UTC" 3132333435363738393031323334353637383930313233343536373839303132
+   $ oathtool \-\-totp=SHA256 \-\-digits=8 \-\-now "2009\-02\-13 23:31:30 UTC" 3132333435363738393031323334353637383930313233343536373839303132
    91819424
    $
 
