@@ -86,8 +86,14 @@ dotest "-c 4 -w 4 -d 7 00 964213" "2" fail
 dotest "-c 4 -d 7 00 964213" "2" fail
 dotest "--totp $sha1key -N @59 -d8" "94287082"
 dotest "--totp=sha256 $sha256key -N @59 -d8" "46119246"
+dotest "--totp=Sha256 $sha256key -N @59 -d8" "46119246"
+dotest "--totp=SHA256 $sha256key -N @59 -d8" "46119246"
 dotest "--totp=sha512 $sha512key -N @59 -d8" "90693936"
+dotest "--totp=sHa512 $sha512key -N @59 -d8" "90693936"
+dotest "--totp=SHA512 $sha512key -N @59 -d8" "90693936"
 dotest "--totp $sha1key -N @1111111109 -d8" "07081804"
+dotest "--totp=sha1 $sha1key -N @1111111109 -d8" "07081804"
+dotest "--totp=SHA1 $sha1key -N @1111111109 -d8" "07081804"
 dotest "--totp=sha256 $sha256key -N @1111111109 -d8" "68084774"
 dotest "--totp=sha512 $sha512key -N @1111111109 -d8" "25091201"
 dotest "--totp $sha1key -N @1111111111 -d8" "14050471"
